<resources>
    <string name="app_name">NECFLIX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="discover_fragment">Discover</string>
    <string name="details_fragment">Detalles</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="no_suscribirme">No, suscribirme</string>
    <string name="si_tengo_cuenta">Si, tengo cuenta.</string>
    <string name="esta_suscrito_en_necflix">¿Esta suscrito en Necflix?</string>
    <string name="entrar_como_invitado">Entrar como invitado.</string>
    <string name="cuentas">Cuentas</string>
    <string name="zczccasac">zczccasac</string>
    <string name="username">username</string>
    <string name="password">password</string>
</resources>