<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/backgroudFriendly"
    android:padding="8dp"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/logo_necflix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/subscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/backgroudFriendlyText"
        android:textSize="20sp"
        android:layout_marginBottom="12dp"
        android:text="@string/esta_suscrito_en_necflix" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:layout_marginBottom="6dp">

        <TextView
            android:id="@+id/yes"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginEnd="4dp"
            android:textColor="@color/backgroudFriendlyText"
            android:text="@string/si_tengo_cuenta" />

        <TextView
            android:id="@+id/no"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/backgroudFriendlyText"
            android:text="@string/no_suscribirme" />
    </LinearLayout>


    <TextView
        android:id="@+id/invitado"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/backgroudFriendlyText"
        android:text="@string/entrar_como_invitado" />


</LinearLayout>